--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         
         <div class="c-app">
             <div class="c-app__logo">
-                <h1>
+                <h1 class="c-logo">
                     IMPEKABLE
                 </h1>
             </div>
